Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextNumberField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        number var = 5.0
        return var
    end
end